@@ -1,0 +1,1 @@
+1 ICON DISCARDABLE "server/gtk/pioneers-server.ico"
